  * Fixed CD-boot helper which was failing when extracting CD content
  * Added installation directory as one of the isolist.ini settings
  * Fixed unhandled exception message, which wasn't showing properly
  * Extract ISO from CD instead of copying the files (the latter
    approach is blocked by #243105)
  * Fixed target drive selection in CD-boot helper mode, which wasn't
    checking available free space
  * Set file attributes to normal before recursively removing a
    directory
  * Updated Wubi Icon
  * Added UI support for Windows themes (LP: #325207)
  * Fixed uninstaller, that was not being shown when launched by another
    Wubi instance
  * Fixed show-info, it was using an incorrect distro instance for the
    URL
  * No need to use a second temp directory
  * Display controls with transparent background without artifacts
  * Preliminary gettext support (to be completed)
  * Completed gettext support
  * Merged old translations
  * Use previous distro name in strings during uninstallation progress
  * Provide an option to hide wubi installation in CD menu (LP: #338015)
  * Reverted previous changes as suggested by Evan Dandrea and instead
    will hide Wubi option in CD menu if the drive is larger than
    max_iso_size unless a --force-wubi argument is used (LP: #338015)
  * Modified English strings to make them less technical and added
    missing ones
  * More text string edits
  * Ask for confirmation before quitting
  * Some text edits
  * No need to set the title of the message boxes
  * Updated gettext template and translations
  * Fixed typo (LP: #340400)
  * Fixed CD eject issue due to wrong path (LP: #339907)
  * Made btdownloader progress strings consistent with the ones used in the standard downloader

  [ Evan Dandrea ]
  * Fixed a typo in the translation template.
  * Require adminstrator privileges (LP: #340400).  Thanks Agostino Russo!

 -- Agostino Russo <agostino.russo@gmail.com>  Wed, 11 Mar 2009 00:38:55 +0000